Edited wiki page through web user interface.

--- a/wiki/Arquitectura.wiki
+++ b/wiki/Arquitectura.wiki
@@ -1,5 +1,8 @@
 #summary Descripción de la arquitectura de FAIA. (FAIA Architecture)
+= ARQUITECTURA DE FAIA=
+FAIA propone una abstracción general de un agente. El concepto básico que ha sido representado en el framework propuesto es el hecho de que un _agente_ interactúa con una _ambiente_ a través de dos relaciones: _percepción_, la cual es dada al agente por el ambiente con el fin de mostrar algunos de sus aspectos, y _acción_, que ejecuta el agente sobre el medio ambiente con el fin de cambiarlo. Un agente tiene un _estado interno_ que caracteriza sus conocimientos sobre el medio ambiente, un _proceso de decisión_ que permite al agente seleccionar una acción en una situación dada, y un _conjunto de acciones_ que representan los procedimientos que el agente puede realizar. El ambiente es un modelo de un mundo real, que tiene un _estado_ que representa la información relevante sobre el mundo y el _comportamiento_ que representa al simulador del ambiente, que es capaz de interpretar las acciones del agente. Sobre la base de estas definiciones, se ha propuesto la arquitecura de FAIA que se muestra a continuacioón:
+
 = FAIA ARCHITECTURE =
-The FAIA framework realizes an agent general abstraction. The basic concept that has been represented in the proposed framework is the fact that an _agent_ interacts with an _environment_ through two relations: _perception_, which the environment gives to the agent in order to show some of its aspects; and _action_, which the agent executes on the environment in order to change it. Then, as it is well known, an agent has an _internal state_ that typify its knowledge about the environment, a _decision engine_ that allows the agent to take an action in a given situation, and a _set of actions_ that represents the procedures that the agent can perform. The environment is a model of a real world, which has a _state_ that represents relevant information about the world and the _behavior_ that represents the environment simulator, which is able to interpret the agent actions. Based on these definitions, it has been proposed the FAIA architecture shown in figure above:
+The FAIA framework realizes an agent general abstraction. The basic concept that has been represented in the proposed framework is the fact that an _agent_ interacts with an _environment_ through two relations: _perception_, which the environment gives to the agent in order to show some of its aspects; and _action_, which the agent executes on the environment in order to change it. An agent has an _internal state_ that typify its knowledge about the environment, a _decision engine_ that allows the agent to take an action in a given situation, and a _set of actions_ that represents the procedures that the agent can perform. The environment is a model of a real world, which has a _state_ that represents relevant information about the world and the _behavior_ that represents the environment simulator, which is able to interpret the agent actions. Based on these definitions, it has been proposed the FAIA architecture shown in figure below:
 
 http://faia.googlecode.com/svn/wiki/images/arquitectura/faia_architecture.png
