--- a/wiki/UtilizarBusqueda.wiki
+++ b/wiki/UtilizarBusqueda.wiki
@@ -1,4 +1,4 @@
-#summary Breve descripción del uso de estrategias de Búsqueda con FAIA, y de la funcionalidad de generación de archivos PDF en una estrategia de Búsqueda.
+#summary Breve descripción del uso de estrategias de Búsqueda con FAIA, y de la funcionalidad de generación de archivos PDF en una estrategia de Búsqueda. Brief description of the use of search strategies in FAIA.
 
 == Configurar nuestro proyecto para que utilice Búsqueda ==
 
@@ -38,3 +38,33 @@ De esta forma, en el PDF de ejemplo, si observamos a la izquierda arriba, veremo
 En el subárbol de la derecha, podemos observar que el nodo padre del mismo es aquel con EO igual a 1. O sea, es el nodo que se ha generado al aplicar el operador Izquierda sobre el nodo 0 (EO = 0). De esta forma entendemos que nuestra estrategia de búsqueda ha escogido ese nodo para expandir en el paso siguiente. Observar que esta vez se aplicaron 3 operadores: Izquierda, Arriba y Abajo.
 
 Luego podemos ver que el agente ha escogido los nodos: 5, 8, 11, 14, 17, 19, 22, etc... terminando su ejecución en el nodo 40, donde ha llegado al objetivo. Por lo tanto, la acción que va a tomar es la que indica el nodo EO = 1: Izquierda.
+
+== Configuring a project to use Search Strategies ==
+
+To begin using simple search strategies, some classes provided by the framework must be specialized. When there is a project that uses a search strategy from FAIA, you can tell the framework to create two kind of outputs, to observe the inner functioning of the agent, such as the search tree generated. FAIA provides two types of outputs:
+
+  * * * XML files that are stored in the directory "searchTrees" within the project folder.
+  * * * PDF files, which show a graphical representation of the trees generated during the search process. They are stored in the "pdflatex" folder from the project folder. This option uses LaTeX. On the second page of instructions there is a guide for installation on Windows and GNU/Linux.
+
+To configure an agent and to get some of these output, you can use the method _setVisibleTree_ in the _Search_ class. In the Pacman example, this option is set on the _selectAction_ from the _AgentePacman_class:
+
+
+{{{
+Search busqueda = new Search(estrategiaBusqueda);
+
+// Show search tree in PDF file
+busqueda.setVisibleTree(Search.PDF_TREE);
+}}}
+
+
+== Generating PDF files for the Search strategies ==
+
+If FAIA has been set to generate a PDF-tree, the folder "pdfLatex" should look like:
+
+http://faia.googlecode.com/svn/wiki/images/busqueda/carpetaPdflatex.png
+
+In Eclipse, the execution output will look like:
+
+http://faia.googlecode.com/svn/wiki/images/busqueda/salidaEclipse.png
+
+The .tex file are LaTeX files. They are eliminated once their compiling to PDF is finished. The "pdfLatex" folder only contains the resulting PDF files.
