--- a/wiki/FaiaConNetbeans.wiki
+++ b/wiki/FaiaConNetbeans.wiki
@@ -1,4 +1,4 @@
-#summary Instrucciones para utilizar FAIA con NetBeans.
+#summary Instrucciones para utilizar FAIA con NetBeans. Instruction to install FAIA using NetBeans.
 #labels Featured
 
 *LEER ANTES DE CONTINUAR:* Antes de seguir estos pasos es necesario leer [http://code.google.com/p/faia/wiki/InstruccionesInstalacion las instrucciones de instalación].
