--- a/wiki/InstruccionesInstalacion.wiki
+++ b/wiki/InstruccionesInstalacion.wiki
@@ -58,46 +58,71 @@ To do this:
 http://faia.googlecode.com/svn/wiki/images/instalacion/variablePath.png
 
 
-=== En GNU/Linux (Ubuntu) ===
+=== En GNU/Linux (Ubuntu) // In GNU/Linux (Ubuntu) ===
 
 Para instalar SWI-Prolog en Ubuntu Linux, vamos a utilizar una versión especial que se provee en este sitio, y no la oficial de la distribución.
+
+To install SWI-Prolog in Ubuntu Linux, it is necessary to use a special versión that is provided on this site, and not the oficial distribution.
 
  * Descargar el archivo "pl_5.6.57_i386-linux.deb" desde la [http://code.google.com/p/faia/downloads/list sección de Downloads] de éste sitio.
  * Para realizar la instalación, es posible:
    * *Utilizar la interfaz gráfica:* hacer doble click en el archivo para instalarlo desde el "Instalador de paquetes", y luego presionar el botón "Instalar el paquete"
    * *Utilizar la línea de comandos:* abrir una termina y ubicarse en el directorio de descarga. Ejecutar el comando: _sudo dpkg -i pl_5.6.57_i386-linux.deb_
 
-En el [http://www.swi-prolog.org/dl-stable.html sitio de descargas de SWI-Prolog] se puede bajar la versión RPM, para distribuciones que utilicen este tipo de paquetes.
+ * Download the file "pl_5.6.57_i386-linux.deb" from section  [http://code.google.com/p/faia/downloads/list "Downloads"] on this site.
+ * To perform the installation, it is possible:
+   * To use the graphical interface: double click on the file to install it from the “Package installer”, and then press the button “Install package”
+   * o	To use the command line: open a terminal and go to the directory where Linux was downloaded. Execute the command: _sudo dpkg -i pl_5.6.57_i386-linux.deb_
 
-== Instalación de MiKTeX/LaTeX ==
 
-=== En Windows XP ===
+The RPM version can be downloaded from the [http://www.swi-prolog.org/dl-stable.html SWI-Prolog] download site for distributions that use this kind of packages.
+
+== Instalación de MiKTeX/LaTeX // MiKTeX/LaTeX installation ==
+
+=== En Windows XP // In Windows XP ===
 
 La instalación de MiKTeX en Windows XP es simple como la instalación de cualquier programa. Sin embargo hay que mencionar un par de cosas:
+
+The MiKTeX installation procedure on Windows XP is as easy as any other software installation procedure. However, it is necessary to make some comments:
 
  * Durante la instalación, cuando aparezca la sección de "Settings", asegurarse de que la opción "Install missing packages on-the-fly" esté seteada a "Ask me first". De esta forma MiKTeX preguntará antes de instalar automáticamente algún paquete necesario. *Para el uso en FAIA no es importante esta opción*.
 
  * Luego de que el instalador de MiKTeX haya finalizado, hay que instalar un paquete que por defecto no es incluído en la instalación estándar. El nombre del paquete es "pict2e". Para esto, ir a Inicio -> Programas -> MiKTeX 2.7 -> Browse Packages. Para buscar el paquete que tenemos que instalar, colocar en el campo "Name" el valor "pict2e" (sin las comillas) y presionar el botón "Filter". Elegir del resultado el paquete con ese nombre, hacer click derecho y elegir la opción "Install". El paquete se bajará de Internet y luego será instalado. Finalmente, presionar el botón "Close" cuando la instalación haya terminado.
 
-=== En GNU/Linux (Ubuntu) ===
+ * During the installation procedure, when the section “Settings” appears, make it sure that the option “Install missing packages on-the-fly” is set to “Ask me first”. This is necessary in order to allow MiKTeX to ask you before installing automatically any package. This option is not important for using FAIA.
+
+ * Once the MiKTeX installing procedure has been performed, it is necessary to install a package that is not included by default in the standard installation procedure. The name of the package is “pict2e”. In order to do this it is necessary to go to the menu Start -> Programs -> MiKTeX 2.7 -> Browse Packages. In the field “Name” input the value “pict2e” (without quotes) and press “Filter”. Choose the package with that name, right click and select the option “Install”. The package will be downloaded from the internet and then it will be installed. Finally, press “Close” when the installation procedure is completed.
+
+
+=== En GNU/Linux (Ubuntu) // On GNU/Linux (Ubuntu) ===
 
 Para instalar LaTeX en Ubuntu son necesarios los siguientes paquetes (TODO: Hay que corroborar que estos paquetes sean suficientes y necesarios):
+
+Following packages are necessary to install LaTeX in Ubuntu:
 
  * texlive-latex-extra
  * texlive-latex-recommended
  * texlive-fonts-recommended
 
-= FAIA desde Eclipse y !NetBeans =
+= FAIA desde Eclipse y !NetBeans // Using FAIA with Eclipse and NetBeans =
 
 Se pueden encontrar instrucciones de cómo usar FAIA en la wiki del proyecto: tanto para [http://code.google.com/p/faia/wiki/FaiaConEclipse Eclipse] como para [http://code.google.com/p/faia/wiki/FaiaConNetbeans NetBeans].
 
+Instructions to use FAIA with [http://code.google.com/p/faia/wiki/FaiaConEclipse Eclipse] and [http://code.google.com/p/faia/wiki/FaiaConNetbeans NetBeans] can be found in the project’s wiki.
 
-= Instalar FAIA =
+
+= Instalar FAIA // Installing FAIA=
 
 Si bien los detalles para importar FAIA en Eclipse o !NetBans están en sus respectivas páginas wiki, aquí se dan unas breves instrucciones para armar correctamente la estructura de directorios al descomprimir los archivos de FAIA y los ejemplos:
+
+Brief instructions are given here to correctly organize the directory structure of FAIA and the examples that use FAIA. More details for importing FAIA into Eclipse and NetBeans are given in their corresponding wiki pages:
 
  # Crear una carpeta para almacenar FAIA y los ejemplos.
  # Descomprimir el contenido *exacto* de los archivos correspondientes a FAIA y a los ejemplos en esa misma carpeta. La estructura final debería ser similar a la imagen que se muestra abajo.
 
-|| Estructura de directorios ||
+ # Create a folder to store FAIA and its examples.
+ # Uncompress the precise content of the files corresponding to FAIA and its examples in the folder created the previous step. The final structure should be similar to the one that is shown in the image bellow.
+
+
+|| Estructura de directorios  // Directory structure ||
 || http://faia.googlecode.com/svn/wiki/images/instalacion/estructura_directorios_faia.png ||
